WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278096
[GStreamer] Fix build with gstreamer versions < 1.22
https://bugs.webkit.org/show_bug.cgi?id=278096
Summary
[GStreamer] Fix build with gstreamer versions < 1.22
Miguel Gomez
Reported
2024-08-14 03:15:57 PDT
There's a string that's not probably casted in that codepath.
Attachments
Add attachment
proposed patch, testcase, etc.
Miguel Gomez
Comment 1
2024-08-14 03:17:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32189
EWS
Comment 2
2024-08-14 04:50:02 PDT
Committed
282227@main
(20cbdbdaece7): <
https://commits.webkit.org/282227@main
> Reviewed commits have been landed. Closing PR #32189 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug