[GStreamer] Fix build with gstreamer versions < 1.22 https://bugs.webkit.org/show_bug.cgi?id=278096

Reviewed by Carlos Garcia Campos and Xabier Rodriguez-Calvar.

Fix the failing char* cast.

* Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.cpp:
(WebCore::GStreamerRegistryScanner::isContentTypeSupported const):

Canonical link: https://commits.webkit.org/282227@main